<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">

        <TextView
            android:id="@+id/left_label"
            android:text="@string/left_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp" />

        <EditText
            android:id="@+id/left_input"
            android:inputType="numberSigned|numberDecimal"
            android:singleLine="true"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/right_label"
            android:text="@string/right_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="25dp" />

        <EditText
            android:id="@+id/right_input"
            android:inputType="numberSigned|numberDecimal"
            android:singleLine="true"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/operation_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout"
        android:layout_marginBottom="100dp">

        <TextView
            android:id="@+id/operation_label"
            android:text="@string/operation_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp" />

        <Spinner
            android:id="@+id/operation_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/operation_layout"
        android:layout_marginBottom="100dp">

        <TextView
            android:id="@+id/result_label"
            android:text="@string/result_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp" />

        <TextView
            android:id="@+id/answer_label"
            android:text="@string/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/submit_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_layout">

        <Button
            android:id="@+id/submit_button"
            android:text="@string/submit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitButton" />

    </LinearLayout>

</RelativeLayout>